# UI_automation_training

./: .gitignore  pyproject.toml
tests/: conftest.py
tests/features/: test_login.feature  ui_playground.feature
tests/page_objects/config/: config_data.json  timeouts.json
tests/page_objects/test_login_page/: selectors.py  test_login_pom.py
tests/page_objects/ui_playground/: selectors.py  ui_playground_pom.py
tests/step_definitions/: conftest.py  test_login_step_definitions.py  ui_playground_step_definitions.py
tests/utils/: data_utils.py
